// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-filter-field Renders \`c-filter-field\` with custom props 1`] = `
<div
  class="v-input v-text-field v-select v-autocomplete v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <label
          aria-hidden="true"
          class="v-label v-label--active theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <input
          aria-label="Custom label"
          autocomplete="off"
          name="customName"
          role="combobox"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--clear"
          >
            <i
              aria-hidden="true"
              class="v-icon v-icon--link material-icons theme--light"
            >
              clear
            </i>
          </div>
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
  </div>
</div>
`;

exports[`c-filter-field Renders \`c-filter-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span
                class="v-badge v-badge--overlap"
              >
                <span>
                  Fake 1
                </span>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span
                class="v-badge v-badge--overlap"
              >
                <span>
                  Fake 2
                </span>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span
                class="v-badge v-badge--overlap"
              >
                <span>
                  Fake 3
                </span>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-filter-field Renders \`c-filter-field\` with default props 1`] = `
<div
  class="v-input v-text-field v-select v-autocomplete v-input--hide-details theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Filters
        </label>
        <input
          aria-label="Filters"
          autocomplete="off"
          name="filter"
          role="combobox"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--"
          >
            <i
              aria-hidden="true"
              class="v-icon v-icon--link material-icons theme--light"
            />
          </div>
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
  </div>
</div>
`;

exports[`c-filter-field Renders \`c-filter-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span
                class="v-badge v-badge--overlap"
              >
                <span>
                  Fake 1
                </span>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span
                class="v-badge v-badge--overlap"
              >
                <span>
                  Fake 2
                </span>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span
                class="v-badge v-badge--overlap"
              >
                <span>
                  Fake 3
                </span>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-filter-field Renders \`c-filter-field\` with old_entity_patterns 1`] = `
<div
  class="v-input v-text-field v-select v-autocomplete v-input--hide-details theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <input
          aria-label="Custom label"
          autocomplete="off"
          name="customName"
          role="combobox"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--"
          >
            <i
              aria-hidden="true"
              class="v-icon v-icon--link material-icons theme--light"
            />
          </div>
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
  </div>
</div>
`;

exports[`c-filter-field Renders \`c-filter-field\` with old_entity_patterns 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span
                class="v-badge v-badge--overlap"
              >
                <span>
                  Fake 1
                </span>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span
                class="v-badge v-badge--overlap"
              >
                <span>
                  Fake 2
                </span>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span
                class="v-badge v-badge--overlap"
              >
                <span>
                  Fake 3
                </span>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
